--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -10,7 +10,7 @@
   height: 80px;
   width: 100%;
   display: flex;
-  padding-left: 10%;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
