--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,3 +117,7 @@ a {
 .session-shadow {
   box-shadow: 0px 10px 40px rgba(7, 24, 50, 0.07);
 }
+
+.btn-shadow {
+  box-shadow: 0px 10px 25px rgba(28, 202, 223, 0.3);
+}
