--- a/styles/globals.css
+++ b/styles/globals.css
@@ -115,7 +115,7 @@ a {
 }
 
 .session-shadow {
-  box-shadow: 0px 10px 40px rgba(7, 24, 50, 0.07);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .btn-shadow {
